<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:id="@+id/Title"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/title"
	    />
	    
	<Spinner android:id="@+id/InstrumentSelector"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_below="@id/Title">
	</Spinner>
	<Button android:text="@string/button_fingering" 
	    android:id="@+id/ButtonFingering" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/InstrumentSelector"
	    android:onClick="buttonClick">
	</Button>
	<Button android:text="@string/button_trills" 
	    android:id="@+id/ButtonTrills" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_toLeftOf="@id/ButtonFingering"
	    android:layout_below="@id/InstrumentSelector">
	</Button>
	
	<TextView
	    android:id="@+id/InfoWindow"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@id/ButtonFingering"
	    android:layout_alignParentLeft="true"
	    android:background="#222222"
	    >
	</TextView>
</RelativeLayout>
